[gd_scene load_steps=2 format=3 uid="uid://baapt2nhy58e7"]

[ext_resource type="Script" uid="uid://cyte2x4bpcu4i" path="res://Scripts/convoy_menu.gd" id="1_f5pu3"]

[node name="ConvoyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5pu3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.733333)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="WaterBox" type="Panel" parent="MainVBox/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="WaterTextLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox/WaterBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Water: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FoodBox" type="Panel" parent="MainVBox/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="FoodTextLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox/FoodBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Food: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="SpeedBox" type="Panel" parent="MainVBox/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="SpeedTextLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox/SpeedBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Top Speed: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OffroadBox" type="Panel" parent="MainVBox/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="OffroadTextLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox/OffroadBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Offroad: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EfficiencyBox" type="Panel" parent="MainVBox/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="EfficiencyTextLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox/EfficiencyBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Efficiency: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="CargoVolumeContainer" type="VBoxContainer" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="CargoVolumeTextLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox/CargoVolumeContainer"]
layout_mode = 2
text = "Cargo Volume: 0 / 0"

[node name="CargoVolumeBar" type="ProgressBar" parent="MainVBox/ScrollContainer/ContentVBox/CargoVolumeContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="CargoWeightContainer" type="VBoxContainer" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="CargoWeightTextLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox/CargoWeightContainer"]
layout_mode = 2
text = "Cargo Weight: 0 / 0"

[node name="CargoWeightBar" type="ProgressBar" parent="MainVBox/ScrollContainer/ContentVBox/CargoWeightContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="JourneyDestLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
text = "Destination: (X, Y)"

[node name="JourneyProgressLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
text = "Progress: Current / Total"

[node name="JourneyETALabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
text = "ETA: Timestamp"

[node name="HSeparator5" type="HSeparator" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="VehiclesLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
text = "Vehicles: [List of vehicle names]"
autowrap_mode = 2

[node name="AllCargoLabel" type="Label" parent="MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
text = "Cargo: [Summary of cargo items and quantities]"
autowrap_mode = 2

[node name="BackButton" type="Button" parent="MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="MainVBox_ScrollContainer_ContentVBox_FuelBox#FuelTextLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Fuel: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1
